# Lead-Generation-Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: ae131006cca1_create_leads_table.py  b4f9c2a1d8e3_add_approval_status_to_leads.py
app/: config.py  main.py
app/agents/: discovery_pipeline.py  json_utils.py  lead_source.py  orchestrator_agent.py  research_agent.py  structured.py
app/api/: auth.py  health.py  jobs.py  leads.py
app/db/: models.py  repository.py  session.py
app/exporters/: base.py  excel.py  factory.py
app/observability/: alerting.py  logging_config.py  metrics.py  setup.py  tracing.py
app/schemas/: discovery.py  lead.py  research.py
app/tools/: base.py  current_date.py  fetch_url.py  web_search.py
deploy/: README.md  docker-compose.yml
docs/: index.html
docs/learning/: README.md  how-to-add-a-tool.md  phase-1-foundations.md  phase-10-n8n-integration.md  phase-2-llm-provider-layer.md  phase-3-research-sub-agent.md  phase-4-lead-orchestrator.md  phase-5-discovery.md  phase-6-excel-export.md  phase-7-persistence.md  phase-8-api-layer.md  phase-9-observability.md
n8n/: 01-trigger-ingestion.json  02-approval-and-send.json  03-alerting.json
scripts/: try_discovery.py  try_lead.py  try_research.py
tests/: test_config.py  test_health.py  test_ready.py
tests/agents/: test_build_research_agent.py  test_discovery_pipeline.py  test_json_utils.py  test_lead_source.py  test_orchestrator_agent.py  test_research_agent.py  (+1 more)
(+49 files in other folders)
