[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lead-gen-agent"
version = "0.1.0"
description = "Autonomous multi-agent lead-generation system"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "openai>=1.40",
    "anthropic>=0.39",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
